# recoverage

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: DESIGN.md  DESIGN_PRINCIPLES.md  USER_STORIES.md  ideas.md
src/recoverage/: __init__.py  __main__.py  api.py  cli.py  potato.py  server.py  ui.py
src/recoverage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/recoverage/assets/: app.js  hljs.css  index.html  style.css
tests/: test_playwright.py  test_potato.py
